# Raytracer

./: .gitignore  CMakeLists.txt  CMakeLists.txt.macOS  Doxyfile  README.md  config.txt  random_spheres.sh  scene_creator.py  test.cfg  testo  visualize_vector.py
.github/workflows/: action.yml
SceneCreator/: camera.py  lights.py  materials.py  primitives.py  texture.py  transformations.py  utils.py
SceneCreator/Lights/: directionals.py  points.py
SceneCreator/Materials/: color.py  diffuseLight.py  reflection.py  refraction.py
SceneCreator/Primitives/: boxes.py  cones.py  cylinders.py  planes.py  spheres.py  tanglecubes.py  torus.py  triangles.py
SceneCreator/Transformations/: rotation.py  translation.py
docs/: index.html  interface-plugin-documentation.md  light-plugin-documentation.md  material-plugin-documentation.md  primitive-plugin-documentation.md  scene-file-documentation.md  scene-loader-plugin-documentation.md  transformation-plugin-documentation.md
docs/html/: AInterface_8cpp.html  AInterface_8hpp.html  AInterface_8hpp.js  AInterface_8hpp_source.html  ALightBuilder_8cpp.html  ALightBuilder_8hpp.html  ALightBuilder_8hpp.js  ALightBuilder_8hpp_source.html  ALight_8cpp.html  ALight_8hpp.html  ALight_8hpp.js  ALight_8hpp_source.html  AMaterialBuilder_8cpp.html  AMaterialBuilder_8hpp.html  AMaterialBuilder_8hpp.js  AMaterialBuilder_8hpp_source.html  AMaterial_8cpp.html  AMaterial_8hpp.html  AMaterial_8hpp.js  AMaterial_8hpp_source.html  APrimitiveBuilder_8cpp.html  APrimitiveBuilder_8hpp.html  APrimitiveBuilder_8hpp.js  APrimitiveBuilder_8hpp_source.html  APrimitive_8cpp.html  APrimitive_8hpp.html  APrimitive_8hpp.js  APrimitive_8hpp_source.html  ASceneLoader_8cpp.html  ASceneLoader_8hpp.html  ASceneLoader_8hpp.js  ASceneLoader_8hpp_source.html  ATransformationBuilder_8cpp.html  ATransformationBuilder_8hpp.html  ATransformationBuilder_8hpp.js  ATransformationBuilder_8hpp_source.html  ATransformation_8cpp.html  ATransformation_8hpp.html  ATransformation_8hpp.js  ATransformation_8hpp_source.html  (+540 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  (+69 more)
include/Camera/: Camera.hpp
include/Core/: Core.hpp
include/Interface/: Ppm.hpp  Sfml.hpp
include/Interface/common/: AInterface.hpp  IInterface.hpp
include/Light/: Ambient.hpp  Directional.hpp  Point.hpp
include/Light/common/: ALight.hpp  ALightBuilder.hpp  ILight.hpp  ILightBuilder.hpp
include/Material/: Color.hpp  Reflection.hpp  Refraction.hpp
include/Material/common/: AMaterial.hpp  AMaterialBuilder.hpp  IMaterial.hpp  IMaterialBuilder.hpp
include/Plugin/: PluginLoader.hpp
include/Primitive/: Box.hpp  Cone.hpp  Cylinder.hpp  Plane.hpp  Sphere.hpp  Tanglecube.hpp  Torus.hpp  Triangle.hpp
include/Primitive/common/: APrimitive.hpp  APrimitiveBuilder.hpp  IPrimitive.hpp  IPrimitiveBuilder.hpp
include/Rendering/: BVHNode.hpp  HittableList.hpp  Ray.hpp  Rendering.hpp
include/Scene-loader/: Libconfig.hpp
include/Scene-loader/common/: ASceneLoader.hpp  Factory.hpp  ISceneLoader.hpp
include/Texture/: Checker.hpp  DiffuseLight.hpp  Image.hpp  Noise.hpp  SolidColor.hpp
include/Texture/common/: Perlin.hpp  RtwImage.hpp  Texture.hpp
include/Transformation/: Rotation.hpp  Translation.hpp
include/Transformation/common/: ATransformation.hpp  ATransformationBuilder.hpp  ITransformation.hpp  ITransformationBuilder.hpp
include/lib/graphics/: Object.hpp  Sound.hpp
include/lib/my/: Exceptions.hpp  Interval.hpp  Lib.hpp  Logs.hpp  Vector3.hpp
lib/graphics/: Object.cpp  Sound.cpp
lib/my/: Interval.cpp  Lib.cpp  Logs.cpp  Vector3.cpp
scenes/: Cone.cfg  Cylinder.cfg  Tanglecube.cfg  Torus.cfg  Triangle.cfg  box.cfg  box_2_blocks.cfg  box_2_blocks_rotation.cfg  chess_floor.cfg  cone.cfg  earth.cfg  fov.cfg  last_scene.cfg  pdf.cfg  perlin_sphere.cfg  perlin_sphere_light.cfg  quadrilateral.cfg  scene.cfg  sphere_scene.cfg  test.cfg  two_checkered_spheres.cfg
scenes/keynote/: showcase.cfg  showcase3.cfg  test.cfg
scenes/keynote/material/: stars_sky.cfg  stars_sky_v1.cfg  texture_edge.cfg  texture_front.cfg  texture_wrong.cfg
scenes/keynote/primitives/: box_edge.cfg  box_front.cfg  cone_edge.cfg  cone_front.cfg  cylinder_edge.cfg  cylinder_front.cfg  sphere_edge.cfg  sphere_front.cfg  tanglecube_edge.cfg  tanglecube_front.cfg  torus_edge.cfg  torus_front.cfg  triangle_edge.cfg  triangle_front.cfg
scenes/keynote/solar/: solar_good_1.cfg  solar_good_2.cfg  solar_system_scene.cfg  test1.cfg  test2.cfg  test3.cfg
src/: Main.cpp
src/Camera/: Camera.cpp
src/Core/: Core.cpp
src/Interface/: Ppm.cpp  Sfml.cpp
src/Interface/common/: AInterface.cpp
src/Light/: Ambient.cpp  Directional.cpp  Point.cpp
src/Light/common/: ALight.cpp  ALightBuilder.cpp
src/Material/: Color.cpp  DiffuseLight.cpp  Reflection.cpp  Refraction.cpp
src/Material/common/: AMaterial.cpp  AMaterialBuilder.cpp
src/Plugin/: PluginLoader.cpp
src/Primitive/: Box.cpp  Cone.cpp  Cylinder.cpp  Plane.cpp  Sphere.cpp  Tanglecube.cpp  Torus.cpp  Triangle.cpp
src/Primitive/common/: APrimitive.cpp  APrimitiveBuilder.cpp
src/Rendering/: AABB.cpp  BVHNode.cpp  HittableList.cpp  Ray.cpp  Rendering.cpp
src/Scene-loader/: Libconfig.cpp
src/Scene-loader/common/: ASceneLoader.cpp  Factory.cpp
src/Texture/: Checker.cpp  Image.cpp  Noise.cpp  SolidColor.cpp
src/Texture/common/: Perlin.cpp  RtwImage.cpp
src/Transformation/: Rotation.cpp  Translation.cpp
src/Transformation/common/: ATransformation.cpp  ATransformationBuilder.cpp
